# container-factory

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  debug.sh  plan.py  pyproject.toml  setup.sh
.github/: matrix.py
.github/workflows/: build.yaml
containers/: variant.py
containers/gpaw-25.7.0-cpu-2026.01/: Dockerfile  build.sh
containers/gpaw-cpu/: Dockerfile  build.sh  config.json  debian-packages-builder.txt  debian-packages-runner.txt  settings.sh  siteconfig.py  test.sh  variants.json
containers/gpaw-cpu/static/: debian-packages-builder.txt  debian-packages-runner.txt  siteconfig.py
containers/mace/: Dockerfile  config.json  settings.sh
containers/mace/static/: constraints.txt  debian-packages-builder.txt  debian-packages-runner.txt  pyproject.toml  requirements.txt
containers/numlib/: Dockerfile  config.json  settings.sh
containers/numlib/static/: debian-packages-builder.txt  debian-packages-runner.txt
static/: download.sh
