# SPDX-FileCopyrightText: © 2026 Toon Verstraelen <Toon.Verstraelen@UGent.be>
# SPDX-License-Identifier: Apache-2.0

[project]
name = "container-factory"
version = "0.1.0"
description = "Build container images for StepUp projects."
readme = "README.md"
dependencies = [
    "pre-commit>=4.5.1",
    "reuse>=6.2.0",
    "stepup>=3.2.3",
]
requires-python = ">=3.12"

[tool.uv]
package = false
cache-dir = "./.venv/cache"
python-downloads = "auto"
